--- a/src/app/all-work/all-work.component.html
+++ b/src/app/all-work/all-work.component.html
@@ -22,22 +22,7 @@
     <th>Total</th>
     </tr>
 
-    <!----- Making charge display section starts here -->
-    <!-- <tr  style="width:10px;" *ngFor="let i of selectedItem.makingChargeItems;let sno=index;">
-
-    <td>{{sno+1}}</td>
-    <td>{{i.name}}</td>
-    <td>{{i.weight}}</td>
-    <td>{{money(i.cost)}}</td>
-    <td>{{money(i.total)}}</td>
-
-    </tr> -->
-    <!-----Making charge display section ends here  -->
-
-   
-   
-    <!---Stone making charge Input Section ends here--> 
-
+  
 
           <tr>
             <td></td>
@@ -63,17 +48,6 @@
       <hr align="right">
     </tr>
 
-    <!----- Making charge display section starts here -->
-    <!-- <tr  style="width:10px;" *ngFor="let i of selectedItem.stones;let sno=index;">
-
-    <td>{{sno+1}}</td>
-    <td>{{i.name}}</td>
-    <td>{{i.weight}}</td>
-    <td>{{money(i.cost)}}</td>
-    <td>{{money(i.total)}}</td>
-
-    </tr> -->
-    <!-----Making charge display section ends here  -->
 
    
    
@@ -284,15 +258,10 @@
 
 
 
-    <div class="row">
-      <div class="col-md-12 text-center">
-          <mat-spinner *ngIf="boolSpinner" style="margin:0 auto;" 
-          mode="indeterminate"  [diameter]="50"></mat-spinner>
-  
-      </div>
-  </div>
-
       <div class="row">
+        <div class="spinner-container" *ngIf="dataSource.loading$ | async">
+          <mat-spinner></mat-spinner>
+      </div>
       <div class="mat-elevation-z8 table-responsive" > 
             <table  mat-table [dataSource]="dataSource" matSort  matTableExporter #exporter="matTableExporter" style="width:100%">
             
@@ -333,7 +302,7 @@
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Date</th>
               <td mat-cell *matCellDef="let element" > {{element.due }}
               <button mat-stroked-button color="primary" (click)="toggleDisplay()">+</button>
-              <!-- <input matInput type="date" placeholder=" choose Date"  > -->
+             
               <mat-form-field  [hidden]="isdisplay">
                 <mat-label>change Due date</mat-label>
                 <input matInput [matDatepicker]="picker"
@@ -363,11 +332,9 @@
 
                 <ng-container *ngIf="element.image==null">
                   <td *ngIf="!element.isImageSet()">     
-                     <!-- <span style="color:red;" *ngIf="element.imageUploader.message">{{element.imageUploader.message}}</span> -->
                   <input #file type="file" accept='image/*' (change)="element.imageUploader.preview(file.files);uploadItemImage(element);" />
-        
-                  <!-- <img *ngIf="selectedimage" [src]="selectedimage" height="50%" width="80%" class="img-thumbnail"> -->
-                  {{element.imageUploader.imgURL}}
+                 
+                  <div class="lds-roller" *ngIf="loadingImage"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
                 </td>
                 </ng-container> 
 
@@ -399,12 +366,7 @@
           </ng-container >
 
          
-<!-- 
-        <ng-container matColumnDef="balance">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Balance</th>
-          <td mat-cell *matCellDef="let element">{{money(element.total-element.advance)}}</td>
-        </ng-container> -->
-          
+
                
         
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -422,3 +384,4 @@
       </span>
       
       </button>
+      
