--- a/src/app/orders/orders.component.css
+++ b/src/app/orders/orders.component.css
@@ -6,6 +6,7 @@
 .mat-cell, .mat-header-cell{
     padding-left: 50px;
     text-align: left;
+    cursor: pointer;
 
 }
 
@@ -13,7 +14,10 @@ td,th{
     padding:10px;
 }
 
-
+.spinner-container {
+  top: 50%;
+  left: 50%;
+}
 .circle {
     height: 50px;
     width: 50px;
