--- a/src/app/repair/repair.component.html
+++ b/src/app/repair/repair.component.html
@@ -200,6 +200,9 @@
 
       <div class="row">
       <div class="mat-elevation-z8 table-responsive" >
+        <div class="spinner-container"   *ngIf="dataSource.loading$ | async">
+          <mat-spinner class="text-center"></mat-spinner>
+      </div>
             <table  mat-table [dataSource]="dataSource" matSort  matTableExporter #exporter="matTableExporter">
         
               <ng-container matColumnDef="checked">
@@ -254,12 +257,12 @@
             <!-- Symbol Column -->
             <ng-container matColumnDef="total">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Total </th>
-              <td mat-cell *matCellDef="let element">{{element.total}} </td>
+              <td mat-cell *matCellDef="let element">{{money(element.total)}} </td>
             </ng-container>
 
             <ng-container matColumnDef="balance">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Balance </th>
-                    <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)">{{element.total-element.advance}} </td>
+                    <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)">{{money(element.total-element.advance)}} </td>
                   </ng-container>
 
                
