added changes in all workpage

--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -2,9 +2,12 @@
 <div class="container-fluid" style="margin-top: 20px;">
     <div class="row">
        <div class="col-md-6">
-        <button type="button" class="btn btn-primary btn-lg mr-5 " (click)="weekDate()">Weekly</button>
+        <!-- <button type="button" class="btn btn-primary btn-lg mr-5 " (click)="weekDate()">Weekly</button>
         <button type="button" class="btn btn-primary btn-lg mr-5" >Monthly</button>
-        <button type="button" class="btn btn-primary btn-lg mr-5" (click)="dailyDate()">Daily</button>
+        <button type="button" class="btn btn-primary btn-lg mr-5" (click)="dailyDate()">Daily</button> -->
+        <button class="btn active" (click)="totalReport()">Total</button>
+        <button class="btn" (click)="dailyDate()">Daily</button>
+    
        </div>
 
        <div class="col-md-6">
