--- a/src/app/all-work/all-work.component.html
+++ b/src/app/all-work/all-work.component.html
@@ -47,13 +47,7 @@
     <th>Total</th>
       <hr align="right">
     </tr>
-
-
-   
-   
     <!---Stone making charge Input Section ends here--> 
-
-
           <tr>
             <td></td>
             <td></td>
@@ -300,10 +294,9 @@
             <!-- Date Column -->
             <ng-container matColumnDef="date">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Date</th>
-              <td mat-cell *matCellDef="let element" > {{element.due }}
-              <button mat-stroked-button color="primary" (click)="toggleDisplay()">+</button>
+              <td mat-cell *matCellDef="let element" > {{element.due }}<mat-icon (click)="toggleDisplay(element.id)" style="cursor: pointer;font-size: 12px;">edit</mat-icon>
              
-              <mat-form-field  [hidden]="isdisplay">
+              <mat-form-field  *ngIf="element.id === id && isdisplay">
                 <mat-label>change Due date</mat-label>
                 <input matInput [matDatepicker]="picker"
                         (dateChange)="addEvent($event , element)">
@@ -365,10 +358,7 @@
             </td>
           </ng-container >
 
-         
 
-               
-        
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
           </table>
