--- a/src/app/report/report.component.css
+++ b/src/app/report/report.component.css
@@ -1,4 +1,19 @@
+/* Style the buttons */
+.btn {
+    border: none;
+    outline: none;
+    padding: 10px 20px;
+    background-color: #f1f1f1;
+    cursor: pointer;
+    font-size: 18px;
+    margin-left: 20px;
+  }
   
+  /* Style the active class, and buttons on mouse-over */
+  .active, .btn:hover {
+    background-color: #666;
+    color: white;
+  }  
 .btn-spacing{
     margin-right: 10px;
   }
